# llmlang

./: .gitignore  AGENT_WORKFLOW.md  BUILD_GUIDE.md  Cargo.toml  DB_CONNECTORS_GUIDE.md  DESIGN.md  DIAGNOSTICS.md  GEMINI.md  INSTALL_GUIDE.md  LANGUAGE_FUNDAMENTALS.md  LICENSE  LLMLANG_OBSERVATIONS.md  LLM_SPEC.md  MAYBE.md  MCP_GUIDE.md  README.md  RELEASE_GUIDE.md  RT_SPEC.md  SETUP.md  USER_GUIDE.md  fix_tests.py  gen_heavy.py  hello_bin  import_verify.llir  llm-clang  llm-test  maturity_report.md  test_mcp.py  test_simple.llm  test_time  test_time.c  zod_test.js
.antigravitycli/: 6481ba41-694e-46c7-90d6-974f1550fa7c.json
.github/workflows/: ci.yml  release.yml
benchmarks/: aos_sum.c  run_benchmarks.sh  soa_sum.c  soa_sum.llm
benchmarks/01_memory_layout/: aos_sum.c  soa_sum.c  soa_sum.llm
benchmarks/02_vector_math/: vector_add.c  vector_add.llm
benchmarks/03_recursion/: fib.c  fib.llm
benchmarks/04_string_split/: split.c  split.llm
examples/: env_access.llm  factorial.llm  fault_tolerance.llm  fault_tolerance_loop.llm  functional_test.llm  greet.llm  hello.llm  json_test.llm  panic_test.llm  parallel_bench.llm  polymorphism.llm  soa_vector.llm  string_utils.llm  test_trap.llm
lib/: jwt.llm  jwt.llmi  otel.llm  otel.llmi
src/: codegen.rs  lexer.rs  lib.rs  main.rs  parser.rs  rt.c
src/compiler/: error.rs
tests/: alpine_musl_test.sh  compiler_tests.rs  run_http_db_test.sh  run_http_dynamic_router_test.sh  run_http_headers_test.sh  run_http_router_test.sh  run_http_server_test.sh  run_https_test.sh  run_semantic_patch.py  run_simd_perf_test.sh
(+80 files in other folders)
